--- a/test/libsrcml/CMakeLists.txt
+++ b/test/libsrcml/CMakeLists.txt
@@ -19,6 +19,19 @@
 # 
 # CMake files for libsrcml library
 
+# Separate project driver for testing libsrcml outside of build
+if(NOT PROJECT_NAME MATCHES "^srcML")
+    project(srcML-Test-libsrcml)
+    cmake_minimum_required(VERSION 3.15)
+    enable_testing()
+endif()
+
+if(NOT TARGET libsrcml_link)
+    find_library(LIBSRCML_LINK NAMES libsrcml.1.dylib libsrcml.1.so)
+else()
+    set(LIBSRCML_LINK libsrcml_link)
+endif()
+
 include_directories(.)
 
 include_directories(/usr/local/include)
