--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ dep
 deps
 src/parser/PhaseOne.txt
 
-
 # cmake/ctest/cpack
 CMakeCache.txt
 CMakeFiles
@@ -33,10 +32,11 @@ Makefile
 srcML.sublime-project
 srcML.sublime-workspace
 
+# testing log files
+*.log
 
 # Windows Extra files/folders
 src/parser/PhaseOne.txt
-
 
 # Dependency Version File
 deps_version.txt
