Fix name format for manpage

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -1,12 +1,9 @@
-## NAME
-
-**srcml** - Conversion of source code to/from the srcML format, querying and manipulation of srcML
-
+srcml(1) -- Conversion of source code to/from the srcML format, querying and manipulation of srcML
+====
 
 ## SYNOPSIS
 
 `srcml` \[[general-options\]][GENERAL OPTIONS] \[[srcML-options\]][CREATING SRCML] \[[transformations\]][TRANSFORMATIONS] \[[output-src-options\]][EXTRACTING SOURCE CODE] \[input\] \[output\]
-
 
 ## DESCRIPTION
 
