Use symbol SRCML_EXE instead of srcml to account for srcml.exe on Windows

--- a/test/parser/CMakeLists.txt
+++ b/test/parser/CMakeLists.txt
@@ -22,6 +22,13 @@ if(NOT PROJECT_NAME MATCHES "^srcML")
     project(srcML-Test-parser NONE)
     cmake_minimum_required(VERSION 3.14)
     enable_testing()
+    if(NOT WIN32)
+        set(SRCML_EXE "srcml")
+    else()
+        set(SRCML_EXE "srcml.exe")
+    endif()
+else()
+    set(SRCML_EXE $<TARGET_FILE:srcml>)
 endif()
 
 add_subdirectory(testsuite)
