--- a/test/parser/testsuite/CMakeLists.txt
+++ b/test/parser/testsuite/CMakeLists.txt
@@ -61,7 +61,7 @@ macro(setlanguage INLANG URL)
         # set(PRODUCT "${PRODURL}.${LANGEXT}.xml")
         set(OUTFILE "${URL}.${LANGEXT}.xml")
 
-        add_custom_command(COMMAND srcml --output-srcml --language=${LANG} ${BASEFILE} -o ${OUTFILE}
+        add_custom_command(COMMAND ${SRCML_EXE} --output-srcml --language=${LANG} ${BASEFILE} -o ${OUTFILE}
                     DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${BASEFILE}
                     OUTPUT ${OUTFILE}
                     COMMENT "Generating parser testfile ${OUTFILE} from ${BASEFILE}"
@@ -83,7 +83,7 @@ macro(transform OUTFILE INFILE URL XSLT)
     # Passing xslt params is not working, so set here for insertexpr
     set(EXTRA --xslt-param=expr_filename=${CMAKE_CURRENT_BINARY_DIR}/expression.cpp.xml)
 
-    add_custom_command(COMMAND srcml --output-srcml --xslt ${XSLT_DIR}/${XSLT} ${EXTRA} --url=${URL} ${INFILE} -o ${OUTFILE}
+    add_custom_command(COMMAND ${SRCML_EXE} --output-srcml --xslt ${XSLT_DIR}/${XSLT} ${EXTRA} --url=${URL} ${INFILE} -o ${OUTFILE}
                        OUTPUT ${OUTFILE}
                        DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${INFILE}
                        COMMENT "Generating parser testfile ${OUTFILE} from ${INFILE}"
@@ -97,7 +97,7 @@ message(STATUS "  Generating special transformation targets")
 
 configure_file(${CMAKE_CURRENT_BINARY_DIR}/constructor_base.cpp.xml ${CMAKE_CURRENT_BINARY_DIR}/constructor.cpp.xml COPYONLY)
 
-add_custom_command(COMMAND srcml --language=Java --output-srcml finally_cs.cs.xml -o finally_java.java.xml
+add_custom_command(COMMAND ${SRCML_EXE} --language=Java --output-srcml finally_cs.cs.xml -o finally_java.java.xml
                    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/finally_cs.cs.xml
                    OUTPUT finally_java.java.xml
                    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
@@ -220,7 +220,7 @@ foreach(GENURL ${TESTFILES})
         endif()
 
         add_custom_command(
-            COMMAND srcml --output-srcml --xslt ${XSLT_DIR}/insert${VARIATION}.xsl --url=${URL}.${VARIATION} ${GENURL}
+            COMMAND ${SRCML_EXE} --output-srcml --xslt ${XSLT_DIR}/insert${VARIATION}.xsl --url=${URL}.${VARIATION} ${GENURL}
                      -o ${URL}.${VARIATION}.${LANGEXT}.xml
             COMMENT "Generating parser testfile ${URL}.${VARIATION}.${LANGEXT}.xml from ${GENURL}"
             DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${GENURL}
@@ -232,7 +232,7 @@ foreach(GENURL ${TESTFILES})
 
     # all is generated separately because it does not use an XSLT transformation
     add_custom_command(
-        COMMAND srcml --cat --url=${URL}.all ${GENURL} -o ${URL}.all.${LANGEXT}.xml
+        COMMAND ${SRCML_EXE} --cat --url=${URL}.all ${GENURL} -o ${URL}.all.${LANGEXT}.xml
         COMMENT "Generating parser testfile ${URL}.all.${LANGEXT}.xml from ${GENURL}"
         DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${GENURL}
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
@@ -282,37 +282,37 @@ endif()
 
 # targets to manage parser testing
 add_custom_target(run_parser_tests        COMMENT "Run all parser test cases"
-                         COMMAND srcml --parser-test ${FLAGS} ${TESTSUITE}
+                         COMMAND ${SRCML_EXE} --parser-test ${FLAGS} ${TESTSUITE}
                          DEPENDS gen_parser_tests
                          USES_TERMINAL
                          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_target(run_parser_tests_c      COMMENT "Run C parser test cases"
-                         COMMAND srcml --parser-test ${FLAGS} --language=C    ${TESTSUITE}
+                         COMMAND ${SRCML_EXE} --parser-test ${FLAGS} --language=C    ${TESTSUITE}
                          DEPENDS gen_parser_tests
                          USES_TERMINAL
                          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_target(run_parser_tests_cpp    COMMENT "Run C++ parser test cases"
-                         COMMAND srcml --parser-test ${FLAGS} --language=C++  ${TESTSUITE}
+                         COMMAND ${SRCML_EXE} --parser-test ${FLAGS} --language=C++  ${TESTSUITE}
                          DEPENDS gen_parser_tests
                          USES_TERMINAL
                          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_target(run_parser_tests_C++    COMMENT "Run C++ parser test cases"
-                         COMMAND srcml --parser-test ${FLAGS} --language=C++  ${TESTSUITE}
+                         COMMAND ${SRCML_EXE} --parser-test ${FLAGS} --language=C++  ${TESTSUITE}
                          DEPENDS gen_parser_tests
                          USES_TERMINAL
                          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_target(run_parser_tests_java   COMMENT "Run Java parser test cases"
-                         COMMAND srcml --parser-test ${FLAGS} --language=Java ${TESTSUITE}
+                         COMMAND ${SRCML_EXE} --parser-test ${FLAGS} --language=Java ${TESTSUITE}
                          DEPENDS gen_parser_tests
                          USES_TERMINAL
                          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_target(run_parser_tests_cs     COMMENT "Run C\# language parser test cases"
-                         COMMAND srcml --parser-test ${FLAGS} --language=C\#  ${TESTSUITE}
+                         COMMAND ${SRCML_EXE} --parser-test ${FLAGS} --language=C\#  ${TESTSUITE}
                          DEPENDS gen_parser_tests
                          USES_TERMINAL
                          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_target(run_parser_tests_CSHARP COMMENT "Run C\# language parser test cases"
-                         COMMAND srcml --parser-test ${FLAGS} --language=C\#  ${TESTSUITE}
+                         COMMAND ${SRCML_EXE} --parser-test ${FLAGS} --language=C\#  ${TESTSUITE}
                          DEPENDS gen_parser_tests
                          USES_TERMINAL
                          WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
