Turn off full warnings until warning mitigation is in effect

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -136,11 +136,11 @@ endif()
 add_compile_options(
     $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-fPIC>
     $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-Wall>
-    $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-Wextra>
-    $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-pedantic>
-    $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-ansi>
+    # $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-Wextra>
+    # $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-pedantic>
+    # $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-ansi>
 
-    $<$<CXX_COMPILER_ID:MSVC>:/Wall>
+    # $<$<CXX_COMPILER_ID:MSVC>:/Wall>
     $<$<CXX_COMPILER_ID:MSVC>:/D_CRT_SECURE_NO_WARNINGS>  # disable strcpy() warnings
     $<$<CXX_COMPILER_ID:MSVC>:/D_CRT_NONSTDC_NO_WARNINGS> # disable read() warnings
 )
