Add sudo ldconfig to ubuntu action

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -73,9 +73,17 @@ jobs:
           path: build/dist/msi.log
 
       - shell: bash
-        if: matrix.os != 'windows-latest'
+        if: matrix.os == 'macos-latest'
         working-directory: build
         run: |
+          srcml --version
+          srcml --text="int a;" -l C++
+
+      - shell: bash
+        if: matrix.os == 'ubuntu-latest'
+        working-directory: build
+        run: |
+          sudo ldconfig
           srcml --version
           srcml --text="int a;" -l C++
 
