--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -81,7 +81,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         working-directory: build
         run: |
-          export PATH=$PATH:"/c/Program Files/srcML/bin;/c/Program Files (x86)/srcML/bin"
+          export PATH=$PATH:"/c/Program Files/srcML/bin:/c/Program Files (x86)/srcML/bin"
           printenv PATH
           srcml --version
           which srcml
