--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -13,16 +13,18 @@ jobs:
     timeout-minutes: 10
     steps:
 
-      - uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
       - name: Cache Build
         id: cache
         uses: actions/cache@v2
         with:
           path: build
-          key: ${{ runner.os }}-client100
+          key: ${{ runner.os }}-client1
 
-      - shell: bash
+      - name: Setup Ubuntu
+        shell: bash
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           sudo apt update
@@ -33,58 +35,57 @@ jobs:
           curl -L http://www.sdml.cs.kent.edu/build/srcML-1.0.0-Boost.tar.gz | \
               sudo tar xz -C /usr/local/include
 
-      - shell: bash
+      - name: Setup macOS
+        shell: bash
         if: ${{ matrix.os == 'macos-latest' }}
         run: |
           brew install ninja antlr2
           curl -L http://www.sdml.cs.kent.edu/build/srcML-1.0.0-Boost.tar.gz | \
             sudo tar xz -C /usr/local/include
 
-      - uses: microsoft/setup-msbuild@v1
+      - name: Setup Windows
+        uses: microsoft/setup-msbuild@v1
         if: ${{ matrix.os == 'windows-latest' }}
 
-      - shell: bash
+      - name: Create build directory
+        shell: bash
         if: ${{ !steps.cache.outputs.cache-hit }}
         run: mkdir build
 
-      - shell: bash
+      - name: Build on Windows
+        shell: bash
         if: ${{ matrix.os == 'windows-latest' }}
         working-directory: build
-        continue-on-error: true
         run: |
           cmake ..
           cmake --build . --config Release --target install
 
-      - shell: bash
+      - name: Build on Ubuntu/macOS
+        shell: bash
         if: ${{ matrix.os != 'windows-latest' }}
         working-directory: build
         run: |
           cmake .. -G Ninja
           sudo cmake --build . --config Release --target install
 
-      - shell: bash
-        if: matrix.os == 'macos-latest'
-        working-directory: build
-        run: |
-          srcml --version
-          srcml --text="int a;" -l C++
-
-      - shell: bash
-        if: matrix.os == 'ubuntu-latest'
+      - name: Finish install for Ubuntu
+        shell: bash
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         working-directory: build
         run: |
           sudo ldconfig
-          srcml --version
-          srcml --text="int a;" -l C++
 
-      - shell: bash
-        if: matrix.os == 'windows-latest'
+      - name: Set PATH for Windows
+        shell: bash
+        if: ${{ matrix.os == 'windows-latest' }}
         working-directory: build
         run: |
-          export PATH=$PATH:"/c/Program Files/srcML/bin:/c/Program Files (x86)/srcML/bin"
-          printenv PATH
+          echo "/c/Program Files (x86)/srcML/bin" >> $GITHUB_PATH
+
+      - name: Run Installed srcml
+        shell: bash
+        working-directory: build
+        run: |
+          echo $PATH
           srcml --version
-          which srcml
-          srcml.exe --version
-          srcml.exe --text="int a;" -l C++
-          which srcml.exe
+          srcml --text="int a;" -l C++
