--- a/.github/workflows/TestClient.yml
+++ b/.github/workflows/TestClient.yml
@@ -7,7 +7,8 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [windows-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
     steps:
@@ -85,6 +86,13 @@ jobs:
             cmake
             util-linux
 
+      - name: Set PATH for Windows
+        shell: bash
+        if: ${{ matrix.os == 'windows-latest' }}
+        working-directory: build
+        run: |
+          echo "/c/Program Files (x86)/srcML/bin" >> $GITHUB_PATH
+
       - name: Windows Client Tests on Installed srcml
         if: ${{ matrix.os == 'windows-latest' }}
         shell: msys2 {0}
@@ -93,6 +101,7 @@ jobs:
         continue-on-error: true
         run: |
           export SRCML_HOME="/c/Program Files (x86)/srcML/bin"
+
           ctest -C Release -VV
       - uses: actions/upload-artifact@v2
         with:
