Add more debugging for Windows client ctest

--- a/.github/workflows/TestClient.yml
+++ b/.github/workflows/TestClient.yml
@@ -100,8 +100,11 @@ jobs:
         timeout-minutes: 5
         continue-on-error: true
         run: |
+          echo $PATH
           export SRCML_HOME="/c/Program Files (x86)/srcML/bin"
-
+          "/c/Program Files (x86)/srcML/bin/srcml.exe" --version
+          srcml.exe --version
+          srcml --version
           ctest -C Release -VV
       - uses: actions/upload-artifact@v2
         with:
