--- a/test/libsrcml/testsuite/CMakeLists.txt
+++ b/test/libsrcml/testsuite/CMakeLists.txt
@@ -1,4 +1,4 @@
-##
+    ##
 # @file CMakeLists.txt
 # 
 # @copyright Copyright (C) 2013-2019 srcML, LLC. (www.srcML.org)
@@ -20,11 +20,12 @@
 # CMake files for libsrcml tests
 
 # Build and add tests
+add_custom_target(build_libsrcml_tests)
 file(GLOB LIB_TESTS test_*.cpp)
 foreach(LIB_TEST ${LIB_TESTS})
     get_filename_component(TEST_NAME ${LIB_TEST} NAME_WE)
     add_executable(${TEST_NAME} ${LIB_TEST})
-    target_link_libraries(${TEST_NAME} ${LIBSRCML_LINK})
+    target_link_libraries(${TEST_NAME} ${LIBSRCML_LINK} ${LIBSRCML_LIBRARIES})
     set(TEST_DIR ${CMAKE_BINARY_DIR}/bin/tmp/${TEST_NAME})
     add_test(NAME ${TEST_NAME} COMMAND $<TARGET_FILE:${TEST_NAME}>
              WORKING_DIRECTORY ${TEST_DIR})
@@ -36,12 +37,10 @@ foreach(LIB_TEST ${LIB_TESTS})
     configure_file(setlanguage.xsl ${TEST_DIR}/setlanguage.xsl COPYONLY)
     configure_file(schema.rng ${TEST_DIR}/schema.rng COPYONLY)
 
+    add_dependencies(build_libsrcml_tests ${TEST_NAME})
 endforeach()
 
 # Copy xpath test data
-configure_file(copy.xsl copy.xsl COPYONLY)
 configure_file(copy.xsl ${CMAKE_BINARY_DIR}/bin/copy.xsl COPYONLY)
-configure_file(setlanguage.xsl setlanguage.xsl COPYONLY)
 configure_file(setlanguage.xsl ${CMAKE_BINARY_DIR}/bin/setlanguage.xsl COPYONLY)
-configure_file(schema.rng schema.rng COPYONLY)
 configure_file(schema.rng ${CMAKE_BINARY_DIR}/bin/schema.rng COPYONLY)
