--- a/.github/workflows/TestLibsrcml.yml
+++ b/.github/workflows/TestLibsrcml.yml
@@ -56,7 +56,7 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         working-directory: build
         run: |
-          cmake .. -DBUILD_LIBSRCML_TESTS=ON
+          cmake ..
           cmake --build . --config Release --target install
 
       - name: Build on Ubuntu/macOS
@@ -64,7 +64,7 @@ jobs:
         if: ${{ matrix.os != 'windows-latest' }}
         working-directory: build
         run: |
-          cmake .. -G Ninja -DBUILD_LIBSRCML_TESTS=ON
+          cmake .. -G Ninja
           sudo cmake --build . --config Release --target install
 
       - name: Finish install for Ubuntu
@@ -74,13 +74,21 @@ jobs:
         run: |
           sudo ldconfig
 
-      - name: Libsrcml Tests on Installed srcml
+      - name: Build libsrcml Tests
+        shell: bash
         working-directory: build
-        timeout-minutes: 5
         continue-on-error: true
         run: |
-          ctest -C Release -VV -R test_
+          cmake .. -DBUILD_LIBSRCML_TESTS=ON
+          cmake --build . --config Release --target build_libsrcml_tests
+
+      - name: Run libsrcml Tests on Installed libsrcml
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          ctest -C Release -R ^test_
       - uses: actions/upload-artifact@v2
         with:
-          name: LibsrcmlLastTest.${{ runner.os }}.log
+          name: libsrcmlLastTest.${{ runner.os }}.log
           path: build/Testing/Temporary/LastTest.log
