--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -103,6 +103,7 @@ jobs:
         if: ${{ matrix.os != 'windows-latest' }}
         shell: bash
         working-directory: build
+        continue-on-error: true
         run: |
           ctest -VV
       - uses: actions/upload-artifact@v2
