--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -7,8 +7,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [windows-latest]
-        # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
     steps:
