--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -56,7 +56,7 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         working-directory: build
         run: |
-          cmake ..
+          cmake .. -DBUILD_LIBSRCML_TESTS=OFF
           cmake --build . --config Release --target install
 
       - name: Build on Ubuntu/macOS
@@ -64,7 +64,7 @@ jobs:
         if: ${{ matrix.os != 'windows-latest' }}
         working-directory: build
         run: |
-          cmake .. -G Ninja
+          cmake .. -G Ninja -DBUILD_LIBSRCML_TESTS=OFF
           sudo cmake --build . --config Release --target install
 
       - name: Finish install for Ubuntu
