Add build variable SRCML_BUILD_USEPCH which uses PCH, on by default

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,8 @@
 
 option(CLANG_TIME_TRACE "Enable clang profiling." OFF)
 
+option(SRCML_BUILD_USEPCH "Use PCH (PreCompiled Headers" ON)
+
 include_directories(${CMAKE_SOURCE_DIR}/src/libsrcml)
 
 if(CLANG_TIME_TRACE)
