Reduce specific external warning setting (/external:W0) to a global setting

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,7 @@ endif()
 if(NOT CMAKE_INCLUDE_SYSTEM_FLAG_CXX)
     set(CXX_SYSTEM_INCLUDE_CONFIGURATION_FLAG /external:W0)
     set(CMAKE_INCLUDE_SYSTEM_FLAG_CXX /external:I)
+    add_compile_options(${CXX_SYSTEM_INCLUDE_CONFIGURATION_FLAG})
 endif()
 
 if(NOT DYNAMIC_LOAD_ENABLED)
